--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
-    "socket.io-client": "^4.5.0",
+    "socket.io-client": "^4.5.1",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
     "vue-cookies": "^1.8.1",
@@ -27,13 +27,14 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.38.0",
-    "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.8",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "sass-loader": "^13.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.1",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "eslintConfig": {
     "root": true,
