--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "vue-cookies": "^1.8.1",
     "vue-router": "^4.0.15",
     "vue-uuid": "^3.0.0",
+    "vue3-discordpicker": "^1.1.0",
     "vuetify": "npm:@vuetify/nightly@next",
     "webfontloader": "^1.0.0",
     "yup": "^0.32.11"
